<resources>
    <string name="app_name">Pharmacy Automation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">saddamsustcse@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="notification_settings">Notify</string>
    <string name="action_location">Location</string>

    <string name="warning_list">Medicines need to be updated</string>
    <string name="medicine">Medicine</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="uses">Uses</string>
    <string name="mfg_date">Manufacturing Date (DD/MM/YYYY)</string>
    <string name="expire_date">Expire Date (DD/MM/YYYY)</string>
    <string name="price">Price</string>
    <string name="home">Home</string>
    <string name="available">Available</string>
    <string name="expired">Expired</string>
    <string name="sold_out">Sold Out</string>
    <string name="wish_list">Wish List</string>
    <string name="search_location">Search Locations</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="menu">⋮</string>
    <string name="sold">Sold</string>
    <string name="add_wish_list">Add to Wish List</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="quantity">Quantity</string>
    <string name="log">Log</string>
    <string name="revenue">Revenue</string>
    <string name="details">Details</string>
    <string name="search">Search on internet</string>
    <string name="no_data_available">No data available</string>
    <string name="remove_from_wishlist">Remove from wishlist</string>
    <string name="remove_from_soldout">Remove from Sold Out</string>
    <string name="remove_from_expiredlist">Remove from expiredlist</string>

    <string name="name_format">Name : {0}</string>
    <string name="type_format">Type : {0}</string>
    <string name="mfr_format">Manufacturer : {0}</string>
    <!--<string name="uses_format">Uses : {0}</string>-->
    <string name="uses_format">{0}</string>
    <string name="mfg_date_format">Manufacturing Date : {0}</string>
    <string name="exp_date_format">Expire Date : {0}</string>
    <string name="price_format">BDT {0}</string>
    <string name="log_price_format">Price : BDT {0}</string>
    <!--<string name="price_format">Price : BDT {0}</string>-->
    <string name="available_format">Available : {0}</string>
    <string name="location_format">Location : {0}</string>
    <string name="quantity_format">Quantity : {0}</string>
    <string name="sell_medicine_price_format"> = {0} tk</string>
    <string name="sell_medicine_quantity_format_single"> {0} piece</string>
    <string name="sell_medicine_quantity_format_multiple"> {0} pieces</string>
    <string name="sell_medicine_name"> {0} </string>
    <string name="time_format">Time : {0}</string>
    <string name="total_revenue_format">Total Revenue : BDT {0}</string>
    <string name="total_quantity_format_single"> Total {0} piece</string>
    <string name="total_quantity_format_multiple">Total \u0020 {0} \u0020 pieces </string>
    <string name="total_price_format"> = {0} tk</string>
    <!--<string name="total_price_format"> Total = {0} tk</string>-->

    <string name="suggest_base_url">http://www.squarepharma.com.bd</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_location_key">AIzaSyBA_qrqvACj5SI3TwyYIUkhCMPLdWtrWe4</string>
    <!--<string name="google_maps_location_another_key">AIzaSyCJGO_yArVtmDJ64rBIZ1iToFoLCeyJrTY</string>-->

</resources>
