<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_available"
            android:title="@string/available" />
        <item
            android:id="@+id/nav_expired"
            android:title="@string/expired" />
        <item
            android:id="@+id/nav_sold_out"
            android:title="@string/sold_out" />
        <item
            android:id="@+id/nav_wish_list"
            android:title="@string/wish_list" />
    </group>

    <item android:title="Accounts">
        <menu>
            <item
                android:id="@+id/nav_log"
                android:title="Log" />
            <item
                android:id="@+id/nav_revenue"
                android:title="Revenue" />
            <item
                android:id="@+id/nav_calculation"
                android:title="Calculation" />
        </menu>
    </item>

</menu>
