<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/app_bar_notification"
        android:icon="@drawable/ic_notification_3"
        android:title="@string/notification_settings"
        app:showAsAction="always"
        app:actionLayout="@layout/badge_layout"/>

    <item
        android:id="@+id/app_bar_location"
        android:orderInCategory="100"
        android:title="@string/action_location"
        android:icon="@drawable/ic_place_black_24dp"
        app:showAsAction="always" />
    
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->

</menu>
