<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="1dp"
    >
    <!--use it to cardView to show gap between items-->
    <!--app:cardUseCompatPadding="true"-->

    <LinearLayout
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-13dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/row_padding">

        <!--<TextView-->
            <!--android:layout_marginTop="-4dp"-->
            <!--android:id="@+id/sell_medicine_name"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/sell_medicine_name"-->
            <!--android:textAppearance="?android:textAppearanceMedium"-->
             <!--/>-->

        <!--<TextView-->
            <!--android:id="@+id/sell_medicine_quantity"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/sell_medicine_quantity_format"-->
             <!--/>-->

        <!--<TextView-->
            <!--android:id="@+id/sell_medicine_price"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/sell_medicine_price_format" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sell_medicine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/sell_medicine_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="17sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/sell_medicine_quantity"
                android:layout_toRightOf="@+id/sell_medicine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/sell_medicine_quantity_format_multiple"
                android:textSize="17sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/sell_medicine_price"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textSize="17sp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/sell_medicine_price_format" />
        </RelativeLayout>

        <!--<android.support.v4.widget.Space-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_width="2dp"-->
            <!--android:background="?android:attr/listDivider"/>-->
        <View
            android:layout_marginTop="15dp"
            android:id="@+id/splitLine_hor1"
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:visibility="visible"
            android:background="@color/design_default_color_primary" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sell_medicine_total_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/total_quantity_format_multiple"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_alignParentLeft="true"
                android:visibility="visible"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/sell_medicine_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/total_price_format"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_gravity="right"
                android:visibility="visible"
                android:textStyle="normal" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>