<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMedicineActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="24dp"
            android:paddingRight="24dp">

            <!--  Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <!--  Type Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/input_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <!--  Manufacturer Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/input_mfr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/manufacturer"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <!--  Uses Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/input_uses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uses"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <!--  Manufacturing Date Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_mfg_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mfg_date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <!--  Expire Date Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_exp_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/expire_date"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <!--  Price Label -->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->

                <!--<android.support.design.widget.TextInputEditText-->
                    <!--android:id="@+id/input_price"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/price"-->
                    <!--android:inputType="number" />-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/drawer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="-10dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-10dp"
                    android:id="@+id/TILayout"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="11dp"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:hint="Price"
                        android:ems="3"
                        android:inputType="number"
                        android:id="@+id/input_price" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/PhoneNumberTILayout"
                        android:layout_marginTop="-57dp"
                        android:tooltipText="hell"
                        android:layout_marginLeft="145dp">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="165dp"
                            android:layout_height="match_parent"
                            android:hint="Quantity"
                            android:inputType="number"
                            android:ems="8"
                            android:id="@+id/input_quantity" />
                    </android.support.design.widget.TextInputLayout>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <!--  Available Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/available"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <!--  Location Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/input_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <!-- Save Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="28dp"
                android:background="@drawable/save_button"
                android:padding="12dp"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

</android.support.design.widget.CoordinatorLayout>