<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/show_details"
        android:padding="@dimen/row_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@+id/action"
                android:layout_toLeftOf="@+id/action"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/action"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:foreground="@drawable/ic_click_drawable"
                android:gravity="center"
                android:text="@string/menu"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />
        </RelativeLayout>

        <!--<TextView-->
            <!--android:id="@+id/type"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/type_format" />-->


        <!--<TextView-->
            <!--android:id="@+id/mfr"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/mfr_format" />-->

        <TextView
            android:id="@+id/uses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:fontFamily="sans-serif-light"
            android:text="@string/uses_format"
            />

        <!--<TextView-->
            <!--android:id="@+id/mfg_date"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/mfg_date_format" />-->

        <!--<TextView-->
            <!--android:id="@+id/exp_date"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/exp_date_format" />-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_toLeftOf="@+id/type"-->
        <!--android:layout_toStartOf="@+id/type"-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"

                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/type"
                android:layout_toRightOf="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:text="@string/price_format" />
        </RelativeLayout>

        <TextView
            android:id="@+id/exp_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:fontFamily="sans-serif-light"
            android:visibility="gone"
            />

        <!--<TextView-->
            <!--android:id="@+id/price"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:textAppearanceSmall"-->
            <!--android:textStyle="bold"-->
            <!--android:text="@string/price_format" />-->

        <!--<TextView-->
            <!--android:id="@+id/available"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/available_format" />-->

        <!--<TextView-->
            <!--android:id="@+id/location"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/location_format" />-->

    </LinearLayout>
</android.support.v7.widget.CardView>